src/App.css
body {
  background: #ED213A;  /* fallback for old browsers */
background: -webkit-linear-gradient(to right, #93291E, #ED213A);  /* Chrome 10-25, Safari 5.1-6 */
background: linear-gradient(to right, #93291E, #ED213A); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
font-family: 'Quicksand';
}

html {
  background: black;
}
.App {
  text-align: center;
}

.App-logo {
  height: 50px;
}

.App-header {
  background: #ED213A;  /* fallback for old browsers */
  background: -webkit-linear-gradient(to right, #93291E, #ED213A);  /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(to right, #93291E, #ED213A); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
  height: 43px;
  padding: 20px;
  padding-right: 41px;
  color: white;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

#back {
  height: 35vw;
  cursor: pointer;
  position: fixed;
  z-index: 99;
}

#back2 {
  height: 35vw;
  cursor: pointer;
}

#search {
  border-radius: 6px;
  border: none;
  height: 15px;
  width: 210px;
  font-size: 13px;
  padding: 15px 7px;
  outline: none;
  -webkit-transition: .3s ease-in-out;
  transition: .3s;
}

#search:focus {
  background: red;
  color:white;
  transition: .3s ease-in-out;
}

form {
  margin-left: 33px;
}

.filter-wrapper {
  display: flex;
  align-items: center;
  margin-left: auto;
}

.App-header input {
  border-radius: 20px;
  border: none;
  height: 50px;
  width: 400px;
  font-size: 21px;
  padding: 5px 15px;
  outline: none;
}

.App-title {
  font-size: 1.5em;
}

.App-intro {
  font-size: large;
}

.subtype-filter {
  padding: 15px;
  color: grey;
  cursor: pointer;
  transition: all .2s ease-in-out;
  width: 65px;

}

.subtype-filter img {
  height: 30px;
}

.subtype-filter p {
  margin: 0;
  color: white;
}

.subtype-filter:hover {
  background: gold;
  transition: all .2s ease-in-out;
}
.loader {
  width: 80%;
  margin-top: 40px;
}

.card-container {
  width: 95%;
  margin: 0 auto;
  display: flex;
  justify-content: space-evenly;
  flex-wrap: wrap;
}

.card {
  height: 250px;
  margin: 30px 10px;
  position: relative;
  transition: all .3s ease-in-out;
}

.card:hover {
  transform: scale(1.1);
  transition: all .3s ease-in-out;
}

.card img {
  height: 100%;
  transition: .3s all ease-out
}

.card h2 {
  position: relative;
  bottom: 120px;
  transform: rotate(-25deg);
  color: green;
  background: white;
  border-radius: 12px;
}

.selected-wrapper {
  display: flex;
  padding: 15px;
  justify-content: center;
  flex-wrap: wrap;
}

.img-wrapper {
  height: 400px;
  margin: 10px;
}

.info-wrapper {
  margin: 10px;
  color: #fff;
  padding: 20px 75px;
}

.img-wrapper img {
  height: 100%;
}


@media (max-width: 520px) {
  .App-header input {
    width: 80%;
  }

  .card-container {
    flex-direction: column;
  }

  .card {
    height: 350px;
  }

  .card button {
    width: 54%;
  }

  #back {
    height: 35vw;
  }
}

@media (max-width: 700px) {
  form, form input {
    width: 100% !important;
  }

  #back {
    height: 50vw;
  }
}

@media (max-width: 861px) {
  .filter-wrapper {
    height: 100%;
    width: 100%;
    padding: 0 15px;
    justify-content: space-evenly;
  }

  .subtype-filter img {
    height: 30px !important;
  }

  .App-header {
    flex-direction: column;
    height: 100%;
  }

  #back {
    height: 35vw;
  }
}

